[gd_scene load_steps=2 format=3 uid="uid://0kbxy7s7met2"]

[ext_resource type="Script" path="res://Scripts/Network.gd" id="1"]

[node name="Network" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="GetPlayer" type="Button" parent="."]
layout_mode = 0
offset_left = 517.0
offset_top = 466.0
offset_right = 605.0
offset_bottom = 497.0
text = "Get player"

[node name="GetScores" type="Button" parent="."]
layout_mode = 0
offset_left = 511.0
offset_top = 430.0
offset_right = 600.0
offset_bottom = 461.0
text = "Get scores"

[node name="AddScore" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.071
anchor_bottom = 0.065
offset_left = 527.0
offset_top = 366.0
offset_right = 530.208
offset_bottom = 366.0
text = "Add score"

[node name="Score" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 670.0
offset_top = 299.0
offset_right = 737.063
offset_bottom = 330.0

[node name="PlayerName" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 677.0
offset_top = 209.0
offset_right = 744.063
offset_bottom = 240.0

[node name="ID" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.056
anchor_bottom = 0.034
offset_left = 677.0
offset_top = 118.0
offset_right = 679.55
offset_bottom = 126.968

[node name="LabScore" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.01
offset_left = 561.0
offset_top = 298.0
offset_right = 592.48
offset_bottom = 321.0
text = "Score"

[node name="LabName" type="Label" parent="."]
layout_mode = 0
offset_left = 527.0
offset_top = 208.0
offset_right = 624.0
offset_bottom = 231.0
text = "Player name"

[node name="LabID" type="Label" parent="."]
layout_mode = 0
offset_left = 535.0
offset_top = 126.0
offset_right = 605.0
offset_bottom = 149.0
text = "Player ID"

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 206.0
offset_top = 521.0
offset_right = 943.0
offset_bottom = 617.0

[connection signal="pressed" from="GetPlayer" to="." method="_get_player"]
[connection signal="pressed" from="GetScores" to="." method="_get_scores"]
[connection signal="pressed" from="AddScore" to="." method="_on_add_score_pressed"]
